added strongly typed routes article

--- a/pages/about.mdx
+++ b/pages/about.mdx
@@ -5,7 +5,7 @@ import Head from "next/head";
   <meta name="title" content="About me" />
   <meta
     name="description"
-    content="I'm a Software Engineer based in Singapore. I primarily work as a front-end web developer, using React, Typescript."
+    content="I'm a Software Engineer based in Singapore. I primarily work as a front-end web developer, using React & Typescript."
   />
 </Head>
 
@@ -20,12 +20,13 @@ I dabble in DevOps and back-end too, with some experience in Kubernetes, Helm, S
 
 Centre for Strategic Infocomm Technologies (CSIT), Singapore.
 
-At CSIT, I lead the front-end development of an internal enterprise web app.
+At CSIT, I lead the front-end development of an internal enterprise web app.  
+Another responsibility I have is helping to architect the front-end solution of a project that is unifying multiple existing apps.
 
 ## Get in touch
 
 I'm always open to opportunities, you can reach me at:
 
-- <a href="mailto:wenchong.lee@gmail.com">wenchong.lee@gmail.com</a>
+- [wenchong.lee@gmail.com](mailto:wenchong.lee@gmail.com)
 - [Linkedin](https://www.linkedin.com/in/wenchonglee/)
 - [Github](https://github.com/wenchonglee)
