--- a/pages/about.mdx
+++ b/pages/about.mdx
@@ -7,6 +7,7 @@ import Head from "next/head";
     name="description"
     content="I'm a Software Engineer based in Singapore. I primarily work as a front-end web developer, using React & Typescript."
   />
+  <meta property="og:image" content="/favicon.ico" key="og:image" />
 </Head>
 
 # About
