--- a/data/strongly-typed-routes.mdx
+++ b/data/strongly-typed-routes.mdx
@@ -2,7 +2,7 @@
 title: Strongly Typed Routes
 publishedOn: 11 Jul 2022
 excerpt: How to organize and safely manage routes in a React SPA, with the help of react-location.
-exhibit: Squiggle
+exhibit: SquiggleRoutes
 image: /strongly-typed-routes/meta.jpg
 ---
 
