added section for mantine salt in projects page

--- a/pages/projects.mdx
+++ b/pages/projects.mdx
@@ -15,6 +15,13 @@ Repository: https://github.com/wenchonglee/dev-blog
 
 This was built with NextJS and each page is statically generated.
 
+## Mantine Salt
+
+Demo site: https://mantine-salt.vercel.app  
+Repository: https://github.com/wenchonglee/mantine-salt
+
+A select number of custom components written using Mantine, for work. They are open sourced in the spirit of sharing.
+
 ## Stickpoll
 
 A full stack webapp clone of straw poll.  
